Fix bug with displaying images on mobile phones in projects.html

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -228,13 +228,11 @@ img.jumbotron-styling {
   }
 }
 
-
 @media (max-width: 666px) {
   img.jumbotron-styling {
     height: 15em;
   }
 }
-
 
 /* 4. Features */
 
@@ -585,16 +583,11 @@ footer {
 /* Projects Subpage */
 
 .projects-subpage {
-  
   background-color: rgb(250 250 250);
-  
 }
 
 .projects-subpage-wrapper {
-  width: 100%;
-  height: auto;
   max-width: 1300px;
-  aspect-ratio: 16 / 9;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -617,16 +610,13 @@ footer {
 }
 
 .projects-subpage-gallery a {
-  width: 400px;
-  height: 400px;
-  aspect-ratio: 1 / 1;
+  width: 25em;
+  height: 25em;
 }
 
 .projects-subpage-image {
-
   border-radius: 10px;
 }
-
 
 .projects-subpage-gallery img:hover {
   cursor: pointer;
@@ -902,9 +892,10 @@ footer {
     margin-bottom: 1.5em;
   }
 
+  .projects-subpage-gallery a,
   .projects-subpage-image {
-    width: 300px;
-    height: 300px;
+    width: 18.75em;
+    height: 18.75em;
   }
 }
 
@@ -963,5 +954,3 @@ footer {
     display: block;
   }
 }
-
-
